# the-surreal-flutter-rocket

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  changes.patch
.devcontainer/: Dockerfile  devcontainer.json
.github/: README.md
.github/workflows/: check.yml  ci.yml  pr_to_main.yml  release.yml  test_and_build.yml
crates/rust_server/: Cargo.toml
crates/rust_server/src/: main.rs
crates/rust_shared/: Cargo.toml  build.rs
crates/rust_shared/src/: api.rs  lib.rs
docs/: README.md
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/test/: widget_test.dart
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart  rust_ffi.dart
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
rust_lib/crates/app/src/: lib.rs
specs/: README.md
